--- a/Rmd/LPS_DESeq-contrasts-0.01_Pdam.Rmd
+++ b/Rmd/LPS_DESeq-contrasts-0.01_Pdam.Rmd
@@ -19,8 +19,16 @@ resultsNames(dds_LPS)
 ### LPS vs. Control
 ```{r}
 res_LPS_ctrl <- results(dds_LPS, contrast = c("Treatment", "LPS", "control"))
-res_LPS_ctrl$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_LPS_ctrl$IDGeneInfo <- as.character(res_LPS_ctrl$IDGeneInfo)
+###
+res_LPS_ctrl$ID <- mcols(dds_LPS)$ID
+res_LPS_ctrl$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_LPS_ctrl$KO_terms <- mcols(dds_LPS)$KO_terms
+res_LPS_ctrl$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_LPS_ctrl$ID <- as.character(res_LPS_ctrl$ID)
+res_LPS_ctrl$GeneInfo <- as.character(res_LPS_ctrl$GeneInfo)
+res_LPS_ctrl$KO_terms <- as.character(res_LPS_ctrl$KO_terms)
+res_LPS_ctrl$Pfam_domains <- as.character(res_LPS_ctrl$Pfam_domains)
+###
 write.csv(as.data.frame(res_LPS_ctrl[order(res_LPS_ctrl$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_LPS_ctrl_FDR1.csv")
 resfdr1_LPS_ctrl <- subset(res_LPS_ctrl, padj<0.01)
 resfdr1_LPS_ctrl_up <- subset(res_LPS_ctrl, padj<0.01 & log2FoldChange>0)
